styled the content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<div class="container">
 			<h1>Game of Thrones</h1>
-			<div class="characters-container"></div>
+			<ul class="characters-container"></ul>
 				
 			
 		</div>
@@ -27,17 +27,13 @@
 		<script id="characterTemplate" type="text/x-handlebars-template">
 			
 			{{#each characters}}
-				<div class="col-xs-4">
-					<ul class="">
-						<li class="character">
-							<img src="img/{{shortCode}}.jpg">
-							<h2>{{name}}</h2>
-							<p>Actor: {{actor}}</p>
-							<p>House: {{house}}</p>
-							<p>Whereabouts: {{location}}</p>
-						</li>
-						</ul>
-				</div>
+				<li class="character">
+					<img src="img/{{shortCode}}.jpg">
+					<h2>{{name}}</h2>
+					<p>Actor: {{actor}}</p>
+					<p>House: {{house}}</p>
+					<p>Whereabouts: {{location}}</p>
+				</li>
 			{{/each}}
 			
 		</script>
