--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<h2>{{name}}</h2>
 					<p>Actor: {{actor}}</p>
 					<p>House: {{house}}</p>
-					<p>Whereabouts: {{#if location}}{{location}}{{else if house}}{{house}}{{else}}Unknown{{/if}}</p>
+					{{#if location}}<p>Whereabouts: {{location}}</p>{{/if}}
 				</li>
 			{{/each}}
 			
