updated the json file, coded the ajax call,, pased the response and nested it within the code

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
 					<img src="img/{{shortCode}}.jpg">
 					<h2>{{name}}</h2>
 					<p>Actor: {{actor}}</p>
-					<p>House: {{house}}</p>
+					{{#with house}}
+						{{#if name}}<p>House: {{name}}</p>{{/if}}
+						{{#if seat}}<p>Seat: {{seat}}</p>{{/if}}
+						{{#if words}}<p>Words: {{words}}</p>{{/if}}
+					{{/with}}
 					{{#if location}}<p>Whereabouts: {{location}}</p>{{/if}}
 				</li>
 			{{/each}}
