--- a/index.html
+++ b/index.html
@@ -22,23 +22,27 @@
 		</div>
 		
 
-		
+		<h1></h1>
 
 		<script id="characterTemplate" type="text/x-handlebars-template">
 			
 			{{#each characters}}
+
 				<li class="character">
-					<img src="img/{{shortCode}}.jpg">
-					{{formatName name house.seat}}
-					<h2>{{name}}</h2>
-					<p>Actor: {{actor}}</p>
-					{{#with house}}
-						{{#if name}}<p>House: {{#makeBold}}{{name}}{{/makeBold}}</p>{{/if}}
-						{{#if seat}}<p>Seat: {{seat}}</p>{{/if}}
-						{{#if words}}<p>Words: {{#upperCase}}{{words}}{{/upperCase}}</p>{{/if}}
-						{{#if phone}}<p>phone: {{formatPhoneNumber phone}}</p>{{/if}}
-					{{/with}}
-					{{#if location}}<p>Whereabouts: {{location}}</p>{{/if}}
+
+					<img src="img/{{shortCode}}.jpg">\
+					<div class="chaaracter-details">
+						<h2>{{name}}</h2>
+						<p>Actor: {{actor}}</p>
+						{{#with house}}
+							{{#if name}}<p>House: {{#makeBold}}{{name}}{{/makeBold}}</p>{{/if}}
+							{{#if seat}}<p>Seat: {{seat}}</p>{{/if}}
+							{{#if words}}<p>Words: {{#upperCase}}{{words}}{{/upperCase}}</p>{{/if}}
+							{{#if phone}}<p>phone: {{formatPhoneNumber phone}}</p>{{/if}}
+						{{/with}}
+						{{#if location}}<p>Whereabouts: {{location}}</p>{{/if}}
+					</div>
+					<a href="#" class="button view-details">View details &#8674;</a>
 				</li>
 			{{/each}}
 			
